Fix UI layout Issue

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -91,6 +91,7 @@ img {
 .table > tbody > tr > td {
     vertical-align: middle;
     border-color:grey;
+    text-align:center;
 }
 
 .title {
